--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
  <header>
-  <img src="images/logo.svg" alt="Logo">
+  <img src="./images/logo.svg" alt="Logo" class="logo">
  </header> 
 </body>
 </html>
