--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="container">
  <header>
-  <img src="./images/logo.svg" alt="Logo" class="logo">
+  <img src="images/logo.svg" alt="Hudle Logo" class="logo">
  </header> 
+</div>
 </body>
 </html>
