--- a/index.html
+++ b/index.html
@@ -3,14 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hudle-Landing-Page</title>
+  <meta name="description" content="Huddle - Build the community your fans will love.">
+  <title>Huddle Landing Page</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
- <header>
-  <img src="images/logo.svg" alt="Hudle Logo" class="logo">
- </header> 
-</div>
+    <header>
+      <img src="images/logo.svg" alt="Huddle Logo" class="logo">
+    </header>
+
+    <section class="card">
+      <div class="card-illustration">
+        <img src="images/illustration-mockups.svg" alt="Illustration" class="card-illustration">
+      </div>
+      <div class="text-content">
+        <h2>Build the community your fans will love</h2>
+        <p>Huddle re-imagines the way we build communities. You have a voice, </p>
+
+      </div>
+    </section>
+  </div>
 </body>
 </html>
