--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
       </div>
       <div class="text-content">
         <h2>Build the community your fans will love</h2>
-        <p>Huddle re-imagines the way we build communities. You have a voice, </p>
+        <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion. </p>
 
+      </div>
+      <div class="btn">
+        <button>Register</button>
       </div>
     </section>
   </div>
